--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2,3 +2,7 @@ pt-BR:
   activerecord:
     attributes:
       usuario:
+        password: 'Senha'
+        password_confirmation: 'Confirmação da senha'
+        current_password: 'Senha atual'
+        remember_me: 'Mantenha-me conectado'
